@@ -1060,3 +1060,5 @@ box.
 (273) Fixed a bug in the Sierpinski sponge code that caused the application
 to crash if it called the code with a negative number of levels
 
+(274) Added --enable-debug configure flag. Currently it only turns on X11
+event tracing, but in the future we could add more.
